; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_stat-shadow.c_runtime_stat__init.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_stat-shadow.c_runtime_stat__init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.runtime_stat = type { %struct.rblist }
%struct.rblist = type { i32, i32, i32 }

@saved_value_cmp = common dso_local global i32 0, align 4
@saved_value_new = common dso_local global i32 0, align 4
@saved_value_delete = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @runtime_stat__init(%struct.runtime_stat* %0) #0 {
  %2 = alloca %struct.runtime_stat*, align 8
  %3 = alloca %struct.rblist*, align 8
  store %struct.runtime_stat* %0, %struct.runtime_stat** %2, align 8
  %4 = load %struct.runtime_stat*, %struct.runtime_stat** %2, align 8
  %5 = getelementptr inbounds %struct.runtime_stat, %struct.runtime_stat* %4, i32 0, i32 0
  store %struct.rblist* %5, %struct.rblist** %3, align 8
  %6 = load %struct.rblist*, %struct.rblist** %3, align 8
  %7 = call i32 @rblist__init(%struct.rblist* %6)
  %8 = load i32, i32* @saved_value_cmp, align 4
  %9 = load %struct.rblist*, %struct.rblist** %3, align 8
  %10 = getelementptr inbounds %struct.rblist, %struct.rblist* %9, i32 0, i32 2
  store i32 %8, i32* %10, align 4
  %11 = load i32, i32* @saved_value_new, align 4
  %12 = load %struct.rblist*, %struct.rblist** %3, align 8
  %13 = getelementptr inbounds %struct.rblist, %struct.rblist* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* @saved_value_delete, align 4
  %15 = load %struct.rblist*, %struct.rblist** %3, align 8
  %16 = getelementptr inbounds %struct.rblist, %struct.rblist* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  ret void
}

declare dso_local i32 @rblist__init(%struct.rblist*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
